--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="container">
-  <app-nav></app-nav>
   <div>
-    <router-outlet></router-outlet>
+    <app-main></app-main>
   </div>
-  <app-footer></app-footer>
 </div>
