Last version for now

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,10 +5,12 @@
         </div>
         <br><br>
         <div>
-            <h2><a class="blueTextColor" href="mailto:aydinayoguzhan@gmail.com"><fa-icon [icon]="faEnvelope"></fa-icon>&nbsp;<b>aydinayoguzhan@gmail.com</b></a></h2>
+            <h3>Student/Developer</h3>
         </div>
         <br>
         <div>
+            <a href="mailto:aydinayoguzhan@gmail.com"><fa-icon class="fa-2x" [icon]="faEnvelope"></fa-icon></a>
+            &nbsp;
             <a href="https://github.com/AydinayOguzhan" target="_blank"><fa-icon class="fa-2x" [icon]="faGithub"></fa-icon></a>
             &nbsp;
             <a href="https://www.linkedin.com/in/oğuzhan-aydınay-7781b21a5/" target="_blank"><fa-icon class="fa-2x" [icon]="faLinkedin"></fa-icon></a>
