--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -8,6 +8,7 @@
 
 h1{
     font-size: 6rem;
+    margin-right: 0.5rem;
 }
 
 .vertical-center {
@@ -26,4 +27,3 @@ a{
     color: inherit;
     text-decoration: none;
 }
-
