--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,7 +5,7 @@
         </div>
         <br><br>
         <div>
-            <h3>Student/Developer</h3>
+            <h3>Backend Developer</h3>
         </div>
         <br>
         <div>
